kubernetes/soulbot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soulbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soulbot
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: soulbot
    spec:
      terminationGracePeriodSeconds: 35
      containers:
      - name: soulbot
        image: unprofessional/soulbot:rc-0.0.1
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        # - containerPort: 443 # HTTPS
        # only uncomment above if using soulbot-ingress.yaml service as a
        # Kubernetes ingress controller
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
          periodSeconds: 3
          timeoutSeconds: 1
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /livez
            port: 8080
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /readyz
            port: 8080
          periodSeconds: 5
          timeoutSeconds: 1
          failureThreshold: 12
        lifecycle:
          preStop:
            httpGet:
              path: /drain
              port: 8080
        # TODO: Kokoro Config
        volumeMounts:
        - name: temp-data-volume
          mountPath: /tempdata
      volumes:
      - name: temp-data-volume
        emptyDir:
          medium: Memory

##############################################################################
############# ALTERNATE FOR GPU — TODO: REFACTOR INTO SEPARATE DOCKERFILE ####
##############################################################################

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: soulbot
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: soulbot
#   template:
#     metadata:
#       labels:
#         app: soulbot
#     spec:
#       containers:
#       - name: soulbot
#         image: unprofessional/soulbot:rc-0.0.1
#         imagePullPolicy: Never
#         ports:
#         - containerPort: 80  # HTTP
#         env:
#         - name: DISCORD_BOT_TOKEN
#           valueFrom:
#             secretKeyRef:
#               name: discord-bot-secret
#               key: DISCORD_BOT_TOKEN
#         - name: STORE_PATH
#           value: "/data"
#         - name: GUILD_STORE_FILE
#           value: "guild.store.json"
#         - name: CHANNEL_STORE_FILE
#           value: "channel.store.json"
#         - name: MEMBER_STORE_FILE
#           value: "member.store.json"
#         - name: FEATURE_STORE_FILE
#           value: "feature.store.json"
#         - name: HOST
#           value: "localhost"
#         - name: PORT
#           value: "5432"
#         - name: PG_USER
#           value: "postgres"
#         volumeMounts:
#         - name: data-volume
#           mountPath: /data
#         - name: temp-data-volume
#           mountPath: /tempdata
#         resources:
#           limits:
#             nvidia.com/gpu: 2 # Request 1 GPU
#       volumes:
#       - name: data-volume
#         persistentVolumeClaim:
#           claimName: soulbot-pvc
#       - name: temp-data-volume
#         emptyDir:
#           medium: Memory
