kubernetes/soulbot-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: soulbot-pod
spec:
  containers:
    - name: soulbot
      image: unprofessional/soulbot:rc-0.0.1
