kubernetes/soulbot-http-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soulbot-http-service
spec:
  selector:
    app: soulbot
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
